[gd_scene load_steps=7 format=3 uid="uid://c6vbdcm28eoip"]

[ext_resource type="Script" path="res://Shop/store.gd" id="1_fit2t"]
[ext_resource type="PackedScene" uid="uid://b1j6161rdxb1b" path="res://Shop/store_item.tscn" id="2_0aeuk"]
[ext_resource type="PackedScene" uid="uid://cgm55dupnb22f" path="res://Shop/item.tscn" id="3_dsdjl"]
[ext_resource type="Texture2D" uid="uid://do4x181mo3sup" path="res://Player/monumento_sprites_prototype_ship2.0.png" id="4_kyq25"]
[ext_resource type="PackedScene" uid="uid://d2haymps3cf4r" path="res://SceneLoading/load_scene_button.tscn" id="5_516gc"]
[ext_resource type="Theme" uid="uid://banvfg58eyhju" path="res://Shop/button_theme.tres" id="6_wpo4n"]

[node name="Store" type="Control" node_paths=PackedStringArray("store_data")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fit2t")
store_item = ExtResource("2_0aeuk")
store_data = [NodePath("Itens/Item"), NodePath("Itens/Item2"), NodePath("Itens/Item3"), NodePath("Itens/Item4"), NodePath("Itens/Item5"), NodePath("Itens/Item6")]

[node name="Itens" type="Node" parent="."]

[node name="Item" parent="Itens" instance=ExtResource("3_dsdjl")]

[node name="Item2" parent="Itens" instance=ExtResource("3_dsdjl")]
item_name = "Cargo Hold Expansion"
item_description = "Storage +2"
item_type = 1
item_power = 2

[node name="Item3" parent="Itens" instance=ExtResource("3_dsdjl")]
item_name = "Battery"
item_description = "Energy +1"
item_type = 2
item_power = 10

[node name="Item4" parent="Itens" instance=ExtResource("3_dsdjl")]
item_name = "Lantern"
item_description = "Lighting +10"
item_type = 3
item_power = 10

[node name="Item5" parent="Itens" instance=ExtResource("3_dsdjl")]
item_name = "Propulsor"
item_description = "Acceleration +1"
item_type = 5

[node name="Item6" parent="Itens" instance=ExtResource("3_dsdjl")]
item_name = "Low Charge Scanner"
item_description = "Filter Efficiency +1"
item_type = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ShipStatus" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ShipStatus"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/ShipStatus/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 21
text = "SHIP STATUS"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/ShipStatus/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/ShipStatus/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(125, 125)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
texture = ExtResource("4_kyq25")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ShipStatus/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 5

[node name="IntegrityLabel" type="Label" parent="MarginContainer/HBoxContainer/ShipStatus/VBoxContainer2/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Integrity: 5"
autowrap_mode = 2

[node name="BatteryLabel" type="Label" parent="MarginContainer/HBoxContainer/ShipStatus/VBoxContainer2/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Energy: 5"
autowrap_mode = 2

[node name="StorageLabel" type="Label" parent="MarginContainer/HBoxContainer/ShipStatus/VBoxContainer2/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Cargo Capacity: 5"
autowrap_mode = 2

[node name="LightingLabel" type="Label" parent="MarginContainer/HBoxContainer/ShipStatus/VBoxContainer2/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Lantern: 5
"
autowrap_mode = 2

[node name="AccelerationLabel" type="Label" parent="MarginContainer/HBoxContainer/ShipStatus/VBoxContainer2/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Acceleration: 5"
autowrap_mode = 2

[node name="FilterEfficienceLabel" type="Label" parent="MarginContainer/HBoxContainer/ShipStatus/VBoxContainer2/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Filter Efficiency: 5"
autowrap_mode = 2

[node name="LoadSceneButton" parent="MarginContainer/HBoxContainer/ShipStatus/VBoxContainer2" instance=ExtResource("5_516gc")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("6_wpo4n")
text = "Return to the Monument"
target_level_path = "res://world.tscn"

[node name="StoreItems" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CashLabel" type="Label" parent="MarginContainer/HBoxContainer/StoreItems"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Cash: "

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/StoreItems"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/HBoxContainer/StoreItems/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
